--- a/Style.css
+++ b/Style.css
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0px 50px 30px rgba(0, 0, 0, 0.4), 0px 0px 50px rgba(0, 0, 0, 0.4);
 }
 
 .calculator{
