--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color:#ecf0f3;
+    background-color:#042b49;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     outline: none;
 }
@@ -12,17 +12,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
 }
 
 .calculator{
-    background-attachment: #ecf0f3;
+    background-attachment: #b1c7d8;
     padding: 20px;
     border-radius: 25px;
     box-shadow: inset 5px 5px 12px #ffffff,
     5px 5px 12px rgba(0,0,0,.16);
     display: grid;
-    grid-template-columns: repeat(4,60px);           
+    grid-template-columns: repeat(4,60px);
+    background-color: #ecf0f3;           
 }
 
 input{
@@ -57,13 +57,10 @@ button{
     border-radius: 50px;
     background-color: #ecf0f3;
 }
-
 h1{
+
     display: flex;
     font-size: 60px;
-    color: rgb(71, 68, 68);
+    color: #ffffff;
     justify-content: center;
-    text-align:center;
 }
-
-
